--- a/Website Maarten Reynders/css/style.css
+++ b/Website Maarten Reynders/css/style.css
@@ -37,14 +37,28 @@ td,th{
     border: 1px solid black;
 }
 
+.eersteImage{
+  margin-left: 30%;
+}
 .portfolioLogos img{
     width: 110px;
     height: 100px;
+    float: left;
 }
-.eersteImage{
-    margin-left: 20%;
-    margin-top: 20%;
-    padding: 0px 10px;
+.padding-div{
+  padding-bottom: 250px;
+}
+
+footer{
+  padding-top: 30px;
+  margin-left: 50%;
+  color: white;
+}
+
+
+.fbLogo{
+  width: 50px;
+  height: 50px;
 }
 
 .contactFormulier{
