Toegevoegd: Logo en cards in index

--- a/Website Maarten Reynders/css/style.css
+++ b/Website Maarten Reynders/css/style.css
@@ -2,6 +2,10 @@
   box-sizing: border-box;
 }
 
+.toggler-div{
+  padding-left: 1%;
+}
+
 body{
 
     margin-top: 5%;
@@ -12,7 +16,6 @@ body{
 .main {
     margin-left: 10%;
     font-size: 20px;
-    padding: 0px 10px;
 }
 
 .my-heading-1{
@@ -41,17 +44,17 @@ td,th{
   margin-left: 30%;
 }
 .portfolioLogos img{
-    width: 110px;
-    height: 100px;
+    width: 70px;
+    height: 60px;
     float: left;
 }
 
 footer{
-  padding-top: 30px;
+  padding-top: 0px;
   margin-left: 50%;
   color: white;
+  max-height: 100px;
 }
-
 
 .fbLogo{
   width: 50px;
@@ -157,9 +160,12 @@ footer{
 /* Media queries - Responsive timeline on screens less than 600px wide */
 @media screen and (max-width: 600px) {
 
-  h1{
-    margin-top: 15%;
-  }
+  .my-heading-1{
+    margin-left: 40%;
+    padding-top: 15%;
+    color: greenyellow;
+    text-decoration: underline;
+}
 
   /* Place the timelime to the left */
   .main-timeline::after {
