--- a/Website Maarten Reynders/css/style.css
+++ b/Website Maarten Reynders/css/style.css
@@ -14,7 +14,6 @@
 
 .carousel-inner{
   width: 300px;
-  margin-left: 40%;
 }
 
 .toggler-div{
@@ -23,13 +22,8 @@
 
 body{
 
-    margin-top: 5%;
     background-image: linear-gradient(to bottom, rgb(0 , 0, 0),rgb(6, 43, 6));
     color: greenyellow;
-}
-
-.main {
-    font-size: 20px;
 }
 
 .my-heading-1{
@@ -55,7 +49,6 @@ td,th{
 }
 
 .portfolioLogos img{
-  position: center;
     width: 70px;
     height: 60px;
     float: left;
@@ -67,7 +60,7 @@ footer{
   max-height: 100px;
 }
 
-.fbLogo{
+.footerLogo{
   width: 50px;
   height: 50px;
 }
